# poc_ffi_bridge

./: Cargo.toml  readme.md
bridge_with_sync/: Cargo.toml
bridge_with_sync/src/: main.rs
bridge_with_sync_2/: Cargo.toml
bridge_with_sync_2/c_src/: c_main.c
bridge_with_sync_2/src/: main.rs
bridge_with_tokio/: Cargo.toml
bridge_with_tokio/c_src/: bridge.c
bridge_with_tokio/src/: main.rs
convert_pointer/: Cargo.toml  build.rs
convert_pointer/c_src/: pointer.c
convert_pointer/src/: main.rs
pass_object_2/: Cargo.toml  build.rs
pass_object_2/c_src/: c_main.c  c_state.c
pass_object_2/src/: main.rs
pass_object_3/: Cargo.toml
pass_object_3/c_src/: c_main.c  c_state.c
pass_object_3/src/: main.rs
pass_rust_object/: Cargo.toml  build.rs
pass_rust_object/src/: main.rs
poc_callback/: Cargo.toml  build.rs
poc_callback/c_src/: use_callback.c
poc_callback/src/: main.rs
poc_cc/: Cargo.toml  build.rs
poc_cc/c_src/: fib.c
poc_cc/src/: main.rs
poc_function_pointer/: Cargo.toml  build.rs
poc_function_pointer/c_src/: function_pointer.c
poc_function_pointer/src/: main.rs
pointer_callback/: Cargo.toml  build.rs
pointer_callback/c_src/: bridge.c
pointer_callback/src/: main.rs
