[package]
name = "poc_ffi_bridge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "poc_cc",
  "poc_callback",
  "poc_function_pointer",
  "pointer_callback",
  "pass_rust_object",
  "pass_object_2",
  "pass_object_3",
  "bridge_with_tokio",
  "bridge_with_sync",
  "convert_pointer"
  ]

[dependencies]
